More cleanup
Add Nav-bar
move reindex to instance()
Add dump of mongo database

Add [ID] to names

npm steps in mvn compile